Updated header background to match logo background

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
 }
 
 .header {
-    background-color: #121212;
+    background-color: #0b0b0b;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
