Decreased transition duration for colour change on hover over buttons

--- a/src/components/SearchButtons/SearchButtons.css
+++ b/src/components/SearchButtons/SearchButtons.css
@@ -87,7 +87,7 @@ button:nth-child(even) {
     button:hover {
         background-color: #9BC59D;
         color: #121212;
-        transition: 1s;
+        transition: .5s;
     }
 
 }
