--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -2,5 +2,9 @@
     font-size: 2rem;
     padding: 1.5rem;
     border: black solid 2px;
+    border-radius: 1rem;
     text-align: center;
+    max-width: 60%;
+    margin: auto;
+    margin-top: 1rem;
 }
