Minor formatting fixes. Add screenshot to ReadMe

--- a/src/components/SearchButtons/SearchButtons.css
+++ b/src/components/SearchButtons/SearchButtons.css
@@ -68,7 +68,8 @@ button:nth-child(even) {
 @media only screen and (min-width: 1200px) {
 
     .searchButtons{
-        margin: 5vw;
+        margin: 0vw 9vw;
+        align-content: center;
     }
 
     button {
