--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -28,7 +28,7 @@
 
 .intro_text {
     color: white;
-    padding: 2rem;
+    padding: 1rem 2rem;
     font-size: 1.2rem;
     text-align: center;
 }
@@ -39,7 +39,7 @@
 
     .title_with_image {
         display: inline-flex;
-        padding: 2rem 2rem 0 2rem;
+        padding: 1rem 2rem 0 2rem;
         align-items: center;
     }
 
@@ -66,7 +66,7 @@
     }
 
     .header img {
-        max-width: 30vw;
+        max-width: 15vw;
     }
 
     .intro_text {
