Update style for keyboard focused elements. Update ReadMe with accessibility info

--- a/src/components/SearchButtons/SearchButtons.css
+++ b/src/components/SearchButtons/SearchButtons.css
@@ -29,6 +29,11 @@ button:nth-child(even) {
     color: #F5CB11;
 }
 
+a:focus-visible, button:focus-visible {
+    outline: 8px solid forestgreen;
+    border-radius: 3px;
+}
+
 /* For tablets  */
 
 @media only screen and (min-width: 768px) {
