--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -1,10 +1,19 @@
 .result {
     font-size: 2rem;
     padding: 1.5rem;
-    border: black solid 2px;
     border-radius: 1rem;
     text-align: center;
-    max-width: 60%;
     margin: auto;
+    /* margin-top: 1rem; */
+    background-image: radial-gradient(#F8D84B, #FFFFFF);
+}
+
+hr {
+    max-width: 50%;
+    margin: auto;
+    height: 2px;
+    background-color:  #DAB409;
+    color: #BB9A08;
     margin-top: 1rem;
+    margin-bottom: .8rem;
 }
