--- a/src/components/SearchButtons/SearchButtons.css
+++ b/src/components/SearchButtons/SearchButtons.css
@@ -2,14 +2,16 @@
     margin: 0
 }
 
+/* Mobile view  */
+
 button {
     font-size: 1.5rem;
-    padding: 1.5rem;
-    margin: 1rem 3rem;
+    padding: 1.2rem;
+    margin: .5rem .5rem;
     border: black solid 2px;
     text-align: center;
     font-weight: bold;
-    width: 80vw;
+    width: 45vw;
     border-radius: 10px;
 }
 
@@ -19,14 +21,29 @@ button:hover {
     color: #121212;
 }
 
-button:nth-child(odd) {
+button:nth-child(1), 
+button:nth-child(4), 
+button:nth-child(5), 
+button:nth-child(8), 
+button:nth-child(9) {
     background-color: #F5CB11;
     color: #121212;
 }
 
-button:nth-child(even) {
+button:nth-child(2), 
+button:nth-child(3), 
+button:nth-child(6), 
+button:nth-child(7), 
+button:nth-child(10) {
     background-color: #121212;
     color: #F5CB11;
+}
+
+.searchButtons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-start;
 }
 
 a:focus-visible, button:focus-visible {
@@ -39,13 +56,16 @@ a:focus-visible, button:focus-visible {
 @media only screen and (min-width: 768px) {
 
     button {
-        max-width: 30vw;
+        max-width: 38vw;
+        margin: 1rem 3rem;
     }
 
     .searchButtons {
-        display: inline-flex;
+        display: flex;
         flex-direction: row;
         flex-wrap: wrap;
+        margin: auto;
+        align-items: center;
     }
 
     button:nth-child(1), 
@@ -79,6 +99,8 @@ a:focus-visible, button:focus-visible {
 
     button {
         max-width: 20vw;
+        padding: 1.4rem;
+        margin: .8rem 3rem;
     }
 
     button:nth-child(odd) {
