--- a/src/components/Activity/Activity.css
+++ b/src/components/Activity/Activity.css
@@ -1,10 +1,9 @@
 .result {
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 1.5rem;
     border-radius: 1rem;
     text-align: center;
     margin: auto;
-    /* margin-top: 1rem; */
     background-image: radial-gradient(#F8D84B, #FFFFFF);
 }
 
@@ -17,3 +16,14 @@ hr {
     margin-top: 1rem;
     margin-bottom: .8rem;
 }
+
+/* For tablets  */
+
+@media only screen and (min-width: 768px) {
+    .result {
+        font-size: 2rem;
+    }
+}
+
+/* For Desktop  */
+/* Not required yet */
