--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -7,6 +7,7 @@
     margin: auto;
     margin-top: 1rem;
     align-items: center;
+    min-height: 6rem;
 }
 
 .loading-text {
@@ -16,4 +17,5 @@
     padding: 0 1rem;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 
