--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -13,7 +13,7 @@
 .loading-text {
     font-size: 2rem;
     text-shadow: 1px 1px black;
-    color: #63A566;
+    color: #508C53;
     padding: 0 1rem;
     font-family: Arial, Helvetica, sans-serif;
 }
